@@ -6,7 +6,8 @@ Correct SP0256 speech for IDSA games (needs additional sp0256-al2.bin file to wo
 Fixed reset / NMI handling for IDSA V-1
 Fix Stern SB300 noise generator regression (and slightly improve sound over older implementation, but still not accurate)
 Fix Rescue 911 (and maybe more: SFII, WCS, Shaq, mZOIS?) DMD brightness level mapping regression
-Improve Punky Willy sound emulation
+Improved Punky Willy sound emulation
+Made speech work for Taito Vegas and Lady Luck
 
 *** ROM SUPPORT *** Thanks to ipdb.org, Effect, Juan, Jubex77, JMan, Gore Daimon, Soren
 New:
